--- a/Reg_Ponto/Ponto_Web/index.html
+++ b/Reg_Ponto/Ponto_Web/index.html
@@ -14,15 +14,14 @@
 </head>
 <body class="bg-gradient-to-br from-blue-50 to-gray-200 min-h-screen flex items-center justify-center px-4">
   <div class="bg-white p-6 rounded-2xl shadow-2xl w-full max-w-sm">
+    <!-- Titulo -->
     <div class="mb-5 text-center">
       <h1 class="text-3xl font-bold text-gray-800">Folha Ponto</h1>
       <p class="text-sm text-gray-500">Registre seus horários com facilidade</p>
     </div>
-
-    <div id="display" class="bg-gray-100 p-4 mb-5 rounded-lg text-right font-mono text-xl h-20 overflow-y-auto shadow-inner">
-      <!-- Exibição de dados -->
-    </div>
-
+    <!-- Tela de exibição -->
+    <div id="display" class="bg-gray-100 p-4 mb-5 rounded-lg text-right font-mono text-xl h-20 overflow-y-auto shadow-inner"></div>
+    <!-- Botoes -->
     <div class="grid grid-cols-4 gap-3">
       <!-- Linha 1 -->
       <button class="bg-gray-200 hover:bg-gray-300 py-3 rounded-lg font-bold text-lg">9</button>
