--- a/Reg_Ponto/Ponto_Web/index.html
+++ b/Reg_Ponto/Ponto_Web/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Folha Ponto</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="img/logo.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
