--- a/Reg_Ponto/Ponto_Web/index.html
+++ b/Reg_Ponto/Ponto_Web/index.html
@@ -49,5 +49,7 @@
       <button class="bg-red-500 hover:bg-red-600 text-white py-3 rounded-lg font-semibold text-sm">Saída</button>
     </div>
   </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
